Mongodb with dotnet core done

--- a/DataAccess/DotNetCore.MongoDB.API/appsettings.json
+++ b/DataAccess/DotNetCore.MongoDB.API/appsettings.json
@@ -2,7 +2,8 @@
   "AppDatabaseSettings": {
     "DatabaseName": "DotNetCoreMongoDBAPI",
     "ConnectionString": "mongodb://localhost:27017",
-    "StudentCollection": "Students"
+    "StudentCollection": "Students",
+    "TeacherCollection": "Teachers"
   },
   "Logging": {
     "LogLevel": {
