Entity framework done

--- a/DataAccess/DotNetCore.EntityFrameWork.API/appsettings.json
+++ b/DataAccess/DotNetCore.EntityFrameWork.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ApplicationConnection": "Data Source=DESKTOP-5P0LOSO;Initial Catalog=AdoDotNetDataAccess;Integrated Security=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
