--- a/DataAccess/DotNetCore.Dapper.API/DotNetCore.Dapper.API.csproj
+++ b/DataAccess/DotNetCore.Dapper.API/DotNetCore.Dapper.API.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Dapper" Version="2.0.143" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.9" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+	<PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.130" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
