--- a/DataAccess/DotNetCore.Dapper.API/appsettings.json
+++ b/DataAccess/DotNetCore.Dapper.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ApplicationConnection": "Data Source=DESKTOP-5P0LOSO;Initial Catalog=AdoDotNetDataAccess;Integrated Security=True;TrustServerCertificate=True;"
+    "ApplicationConnection": "Data Source=DESKTOP-5P0LOSO;Initial Catalog=AdoDotNetDataAccess;Integrated Security=True;TrustServerCertificate=True;",
+    "OracleConnection": "DATA SOURCE=localhost:1521/free;DBA PRIVILEGE=SYSDBA;PERSIST SECURITY INFO=True;USER ID=SYS;PASSWORD=1234"
   },
   "Logging": {
     "LogLevel": {
